# Finger

./: CMakeLists.txt  EnemyPlayer.cpp  EnemyPlayer.h  GameCode.cpp  GameCode.h  UserPlayer.cpp  UserPlayer.h  globals.cpp  main.cpp  main_sfml.cpp  master.cpp  master.h  resize_sprites.py
